kustomize/overays/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deployment
  namespace: default
spec: 
  template:
    spec:
      containers:
      - name: sample-app
