kustomize/overays/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-01735ed43eac96898, subnet-0c16a588903f507cc
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: dev-sample-app
            port:
              number: 80
        path: /
